--- a/principal/templates/registrarUsuario.html
+++ b/principal/templates/registrarUsuario.html
@@ -33,12 +33,18 @@
 
  </head>
 
-<body>
-	<div class="page-wraper" style="margin-left:50px; margin-right:50px;">
+<body style="background-color:white;">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; background:white;">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'home' %}" style="margin: 0px; padding: 0px"><img src="{{STATIC_URL}}img/banner2.jpg"/>
+                <!--<h2 style="margin: 0px; padding: 0px" >Vigtech</h2>--></a>
+            </div>
+    </nav>
+
+	<div class="page-wrapper" style="margin-left:50px; margin-right:50px; background-color:white;">
 		<div class="row">
 			<div class="col-lg-12">
-            	<h1 class="page-header"><i class="fa fa-user">Crear Usuario</i>
-            	 <a href="{% url 'login' %}"><i style="float:right;"class="fa fa-home" align="right"></a></i></h1>
+            	<h1 class="page-header"><i class="fa fa-user">Crear Usuario</i></h1>
 
         	</div>
         	<div class="col-md-4">
