--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
                     <ul class="nav" id="menu">
                         <li class="activate">
                             <!-- Panel principal de trabajo -->
-                            <a class="active" href="#"><i class="fa fa-dashboard fa-fw"></i> Principal</a>
+                            <a class="active" href="{% url 'home' %}"><i class="fa fa-dashboard fa-fw"></i> Principal</a>
                         </li>
 
                         <li >
@@ -94,17 +94,17 @@
                             <!--<ul class="nav nav-second-level" >-->
                             <ul class="collapse-in nav nav-second-level" area-expanded="true" style="">
                             
-                                <li><a href="#">Crear Proyecto</a></li>
-                                <li><a href="#">Eliminar Proyecto</a></li>
-                                <li><a href="#">Mis Proyectos</a></li>
-                                <li><a href="#">Otros Proyectos</a></li>
+                                <li><a href="{% url 'crear_proyecto' %}"><i class="fa fa-plus-square-o fa-fw"></i>Crear Proyecto</a></li>
+                                <li><a href="#"><i class="fa fa-trash-o fa-fw"></i>Eliminar Proyecto</a></li>
+                                <li><a href="{% url 'ver_mis_proyectos'%}"><i class="fa fa-list-ul fa-fw"></i>Mis Proyectos</a></li>
+                                <li><a href="{% url 'ver_otros_proyectos'%}"><i class="fa fa-ellipsis-h fa-fw"></i>Otros Proyectos</a></li>
                                 
                             </ul>
                             
                         </li>
                         <!-- Aprendizaje de maquina -->
                         <li class=""> 
-                             <a href="#"><i class="fa fa-gear fa-fw"></i> Búsqueda y Navegación</a>
+                             <a href="{% url 'busqueda_navegacion'%}"><i class="fa fa-globe fa-fw"></i> Búsqueda y Navegación</a>
                         </li>
                         <li class="">
                              <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Análisis</a>
@@ -129,6 +129,8 @@
 
 
     <script src="{{STATIC_URL}}js/jquery.js"></script>
+    <!--<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>-->
+
 
 
         <!-- Bootstrap Core JavaScript -->
@@ -145,9 +147,9 @@
     </script>
 
         <!-- Morris Charts JavaScript -->
-    <script src="{{STATIC_URL}}/plugins/morris/raphael.min.js"></script>
-    <script src="{{STATIC_URL}}js/plugins/morris/morris.min.js"></script>
-    <script src="{{STATIC_URL}}js/plugins/morris/morris-data.js"></script>
+    <!--<script src="{{STATIC_URL}}/plugins/morris/raphael.min.js"></script>-->
+   <!-- <script src="{{STATIC_URL}}js/plugins/morris/morris.min.js"></script>-->
+   <!-- <script src="{{STATIC_URL}}js/plugins/morris/morris-data.js"></script>-->
 
         <!-- Custom Theme JavaScript -->
     <script src="{{STATIC_URL}}js/sb-admin-2.js"></script>
