--- a/templates/login.html
+++ b/templates/login.html
@@ -35,11 +35,20 @@
 	<body>
 		<!--<div id="page-wraper">-->
 			<div class="container">
+				{% if messages %}
+        		<div class="row">
+        			<div class="col-md-4 col-md-offset-4">
+        				{% for message in messages %}
+					    	<p{% if message.tags == "success" %} class="alert alert-success"{% endif %}>{{ message }}</p>
+					    {% endfor %}
+        			</div>
+        		</div>
+        		{% endif %}
 				<div  class="row">
 					<div class="col-md-4 col-md-offset-4">
 						<div class="login-panel panel panel-default">
 						    <div class="panel-heading">
-						  		<h3 class="panel-title"> Please Sign In</h3>
+						  		<h3 class="panel-title"> Iniciar sesión:</h3>
 						    </div> 
 						    <div class="panel-body">
 								<form method="post" action="{% url 'login' %}" role="form" >
